--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <head>
     <html lang="en">
+        
         <title>Hello </title>
+        </head>
         <body>
+            <h1> Welcome to my webpage </h1>
             Hello world!
 
         </body>
